kubernetes-recipes/apache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
  labels:
    app: httpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd
        image: httpd:2
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: httpd
  labels:
    app: httpd
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v1
      kind:  Mapping
      name:  httpd_mapping
      prefix: /httpd/
      service: httpd
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
  selector:
    app: httpd
